<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="countryData"
            type="com.kurio.corona.domain.model.AllCountries" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgFlag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.5"
                android:scaleType="fitXY"
                android:src="@{countryData.flag}"
                tools:ignore="ContentDescription" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small">

                <TextView
                    style="@style/TextViewNormalBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/country_name" />

                <TextView
                    android:id="@+id/tvCountryName"
                    style="@style/TextViewNormalBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@{countryData.country}" />

                <TextView
                    style="@style/TextViewNormalBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvCountryName"
                    android:layout_alignParentStart="true"
                    android:text="@string/total_cases" />

                <TextView
                    android:id="@+id/tvTotalCases"
                    style="@style/TextViewNormalBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvCountryName"
                    android:layout_alignParentEnd="true"
                    android:text="@{Integer.toString(countryData.deaths)}" />

                <TextView
                    style="@style/TextViewNormalBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTotalCases"
                    android:layout_alignParentStart="true"
                    android:text="@string/today_cases" />

                <TextView
                    android:id="@+id/tvTodayCases"
                    style="@style/TextViewNormalBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTotalCases"
                    android:layout_alignParentEnd="true"
                    android:text="@{Integer.toString(countryData.todayCases)}" />

                <TextView
                    style="@style/TextViewNormalBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTodayCases"
                    android:layout_alignParentStart="true"
                    android:text="@string/total_deaths" />

                <TextView
                    android:id="@+id/tvTotalDeaths"
                    style="@style/TextViewNormalBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTodayCases"
                    android:layout_alignParentEnd="true"
                    android:text="@{Integer.toString(countryData.deaths)}" />

                <TextView
                    style="@style/TextViewNormalBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTotalDeaths"
                    android:layout_alignParentStart="true"
                    android:text="@string/today_deaths" />

                <TextView
                    android:id="@+id/tvTodayDeaths"
                    style="@style/TextViewNormalBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTotalDeaths"
                    android:layout_alignParentEnd="true"
                    android:text="@{Integer.toString(countryData.todayDeaths)}" />

                <TextView
                    style="@style/TextViewNormalBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTodayDeaths"
                    android:layout_alignParentStart="true"
                    android:text="@string/total_recovered" />

                <TextView
                    android:id="@+id/tvRecovered"
                    style="@style/TextViewNormalBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTodayDeaths"
                    android:layout_alignParentEnd="true"
                    android:text="@{Integer.toString(countryData.recovered)}" />
            </RelativeLayout>

        </FrameLayout>


    </androidx.cardview.widget.CardView>
</layout>